# hdl-workflow-platform

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: README.md  hooks.json
.codex/agents/: README.md
.codex/prompts/: loop-iteration.md  session-bootstrap.md  spec-normalization.md
config/: README.md
config/global/: README.md  workspace_config.yaml
config/projects/: README.md
config/templates/: README.md
engine/: README.md
engine/hdlflow/: README.md  __init__.py  artifacts.py  change_control.py  cli.py  config.py  design_doc.py  doctor.py  gates.py  library.py  loop1_reports.py  loop2_bindings.py  loop2_reports.py  memory.py  pipeline.py  project.py  prototype.py  reports.py  requirements_frontend.py  scaffold.py  simple_yaml.py  state_sync.py  ug1118.py  ug835.py  ug894.py  validate.py  vitis_guides.py
engine/hooks/: HdlHook.Common.ps1  Invoke-HdlEntryGate.ps1  Invoke-HdlHookDoctor.ps1  Invoke-HdlPostToolSync.ps1  Invoke-HdlPreToolGuard.ps1  Invoke-HdlStopCheckpoint.ps1  README.md
projects/: README.md
scripts/: Export-HdlProject.ps1  Invoke-HdlModelSim.ps1  Invoke-HdlVivado.ps1  New-HdlProject.ps1  README.md  new_hdl_project.py
skills/: README.md
skills/assertion-and-coverage/: SKILL.md
skills/hdl-requirements-decompose/: SKILL.md
skills/hdl-workflow-orchestrator/: SKILL.md
skills/mineru-spec-normalizer/: SKILL.md
skills/modelsim-run-triage-debug/: SKILL.md
skills/register-spec-and-ral/: SKILL.md
templates/: README.md
templates/project/: README.md  (+1 more)
tests/: test_hdlflow_platform.py
(+200 files in other folders)
